apps/base/pi-hole/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    middle-earth-cluster.homelab/category: apps
    middle-earth-cluster.homelab/realm: network
